[tool.poetry]
name = "MontanaElkHunterSuccessRate"
version = "0.0.2"
description = "Juypter Notebook tracking hunter success rates for ELK since wolf reintroduction"

license = "MIT"

authors = [
    "Shawn Campbell <shawn@riffleanalytics.com>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/jaegerpicker/MontantaElkHunterSuccessRate"
homepage = "https://github.com/jaegerpicker/MontantaElkHunterSuccessRate"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here
toml = "^0.9"
# Dependencies with extras
pandas = { version = "*" }
# Python specific dependencies with prereleases allowed
pathlib2 = { version = "^2.2", python = "~2.7", allow-prereleases = true }
jupyter = "^1.0.0"
ipykernel = "^5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'my_package:main'
